1998-08-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* */.cvsignore: Added .cvsignore files.

1998-08-23  Alex Roberts  <bse@dial.pipex.com>

	* Moved all plugins into their own directories...
	
	* Added Mikael Hermansson's Projektmanager plugin (Very nice Mikael)

1998-08-08  Chris Lahey  <clahey@umich.edu>

	* client.c: Made another #include ordering change.

1998-08-06  Chris Lahey  <clahey@umich.edu>

	* client.c (client_document_close): 
	* client.h: client_document_close returns a value based on whether
	the document was actually closed.  Returns true if it was closed.

1998-08-06  Chris Lahey  <clahey@umich.edu>

	* client.h: 
	* client.c: Added a document_close function.
	Added a bunch of checks during writing data.

1998-07-20  Chris Lahey  <clahey@umich.edu>

	* Makefile.am: Removed decrypt-plugin from plugin_PROGRAMS

1997-07-20  Alex Roverts  <bse@dial.pipex.com>

	* Renamed 'Encrypt' to 'Encryption'

	* Removed 'Decrypt', as Encrypt also decrypts aswell! 

1998-07-19  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* .cvsignore: Created this file. Added Makefile.in to it.

1998-07-19  Chris Lahey  <clahey@umich.edu>

	* client.h: 
	* client.c: Copied these from the go sources.  Mostly changes to
	increase robustness.

1998-07-18  Chris Lahey  <clahey@umich.edu>

	* reverse.c: Changed the comment at the top of the code.
	
	* encrypt.c (main): Fixed a bug in the encryption code.

	* encrypt.c (main): Forgot to change the menu location from
	Reverse.

1998-07-18  Chris Lahey  <clahey@umich.edu>

	* encrypt.c: Rewrote this based on reverse.c instead of diff.c.

1998-07-18  Chris Lahey  <clahey@umich.edu>

	* plugin_howto: New file documenting the plugin API in client.h.

1998-07-16  Alex Roberts  <bse@dial.pipex.com>
	
	* Added encrypt/decrypt plugins to main plugin repo...