@@ -1,3 +1,7 @@
+1998-08-27  Martin Baulig  <martin@home-of-linux.org>
+
+	* Makefile.am (SUBDIRS): Disabled `spell' if we don't have GNOME.
+
 1998-08-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>
 
 	* */.cvsignore: Added .cvsignore files.
